# clinical-rag-safety-gateway-20260716

./: ARCHITECTURE.md  DATASET_CARD.md  Dockerfile  MODEL_CARD.md  PORTFOLIO.md  PRODUCTION.md  README.md  ROADMAP.md  SECURITY.md  evaluate.py  pyproject.toml  train.py
artifacts/: model.json
config/: project.json
data/: test.jsonl  train.jsonl
src/clinical_rag_safety/: __init__.py  cli.py  real_world.py  service.py
tests/: test_pipeline.py
